--- a/index.html
+++ b/index.html
@@ -14,15 +14,45 @@
     <body class="container">
 
         <div class="sidebar">
-            Sidebar
+            <button class="nav-btn"></button>
         </div>
 
         <header class="header">
-            Header
+            <img src="img/logo.png" alt="Nexter logo" class="header__logo">
+            <h3 class="heading-3">Your won home:</h3>
+            <h1 class="heading-1">The ultimate personal freedom</h1>
+            <button class="btn header__btn">View our properties</button>
+            <div class="header__seenon-text">Seen on</div>
+            <div class="header__seenon-logos">
+                <img src="img/logo-bbc.png" alt="Seen on logo 1">
+                <img src="img/logo-forbes.png" alt="Seen on logo 2">
+                <img src="img/logo-techcrunch.png" alt="Seen on logo 3">
+                <img src="img/logo-bi.png" alt="Seen on logo 4">
+            </div>
         </header>
 
         <div class="realtors">
-            Top 3 Realtors
+            <h3 class="heading-3">Top 3 Realtors</h3>
+            <div class="realtors__list">
+
+                <img src="img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Erik Feinman</h4>
+                    <p class="realtors__sold">245 houses sold</p>
+                </div>
+
+                <img src="img/realtor-2.jpeg" alt="Realtor 2" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Kim Brown</h4>
+                    <p class="realtors__sold">212 houses sold</p>
+                </div>
+
+                <img src="img/realtor-3.jpeg" alt="Realtor 3" class="realtors__img">
+                <div class="realtors__details">
+                    <h4 class="heading-4 heading-4--light">Toby Ramsey</h4>
+                    <p class="realtors__sold">198 houses sold</p>
+                </div>
+            </div>
         </div>
 
         <section class="features">
@@ -346,7 +376,20 @@
         </section>
 
         <footer class="footer">
-            Footer
+
+            <ul class="nav">
+                <li class="nav__item"><a href="#" class="nav__link">Find your home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Home planner</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Submit property</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Work with us!</a></li>
+            </ul>
+
+            <p class="copyright">
+                &copy; Copyright 2018 by Nexter. All rights reserved.
+            </p>
+
         </footer>
         
     </body>
